INCLUDE_DIRECTORIES(${INCLUDE_DIR})

ADD_DEFINITIONS(-D_UNICODE)

SET(METAZION_INCLUDE_DIR $ENV{METAZION})
SET(COMMON_INCLUDE_DIR ${INCLUDE_DIR}/../Common)
SET(SELF_INCLUDE_DIR ${INCLUDE_DIR})
MESSAGE(STATUS ${METAZION_INCLUDE_DIR})
MESSAGE(STATUS ${COMMON_INCLUDE_DIR})
MESSAGE(STATUS ${SELF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${METAZION_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${COMMON_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SELF_INCLUDE_DIR})

SET(METAZION_LIBRARY_DIR $ENV{METAZION}/Lib)
MESSAGE(STATUS ${METAZION_LIBRARY_DIR})
LINK_DIRECTORIES(${METAZION_LIBRARY_DIR})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Lib)
SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/Lib)

FILE(GLOB SELF_HEADERS "./*.hpp")
FILE(GLOB SELF_SOURCES "./*.cpp")

ADD_EXECUTABLE(${SELF}
    ${SELF_HEADERS}
    ${SELF_SOURCES}
)

SET(METAZION_NET_LINK_LIBRARY optimized MzNet debug MzNetD)
TARGET_LINK_LIBRARIES(${SELF} ${METAZION_NET_LINK_LIBRARY})
SET(METAZION_SHARE_LINK_LIBRARY optimized MzShare debug MzShareD)
TARGET_LINK_LIBRARIES(${SELF} ${METAZION_SHARE_LINK_LIBRARY})
IF(UNIX)
TARGET_LINK_LIBRARIES(${SELF} pthread)
ENDIF(UNIX)

IF(PRODUCT_INSTALL)
    INSTALL(TARGETS ${SELF}
    RUNTIME DESTINATION ${BIN_DIR}
    LIBRARY DESTINATION ${LIB_DIR}
    ARCHIVE DESTINATION ${LIB_DIR})
ENDIF(PRODUCT_INSTALL)

# These are used to create visual studio folders.
SOURCE_GROUP(Header FILES ${SELF_HEADERS})
SOURCE_GROUP(Source FILES ${SELF_SOURCES})