ADD_DEFINITIONS(-D_UNICODE)

SET(METAZION_DIR $ENV{METAZION})
MESSAGE(STATUS ${METAZION_DIR})

SET(METAZION_INCLUDE_DIR ${METAZION_DIR})
SET(SELF_INCLUDE_DIR ${INCLUDE_DIR})
MESSAGE(STATUS ${METAZION_INCLUDE_DIR})
MESSAGE(STATUS ${SELF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${METAZION_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SELF_INCLUDE_DIR})

SET(METAZION_LIBRARY_DIR ${METAZION_DIR}/Lib)
MESSAGE(STATUS ${METAZION_LIBRARY_DIR})
LINK_DIRECTORIES(${METAZION_LIBRARY_DIR})

FILE(GLOB SELF_HEADERS "./*.hpp")
FILE(GLOB SELF_SOURCES "./*.cpp")
FILE(GLOB SELF_XML_HEADERS "./Xml/*.hpp")
FILE(GLOB SELF_PACKET_HEADERS "./Packet/*.hpp")
FILE(GLOB SELF_PACKET_SOURCES "./Packet/*.cpp")
FILE(GLOB SELF_SERVER_HEADERS "./Server/*.hpp")
FILE(GLOB SELF_SERVER_SOURCES "./Server/*.cpp")

ADD_LIBRARY(${SELF}
    ${SELF_HEADERS}
    ${SELF_SOURCES}
    ${SELF_XML_HEADERS}
	${SELF_PACKET_HEADERS}
    ${SELF_PACKET_SOURCES}
	${SELF_SERVER_HEADERS}
    ${SELF_SERVER_SOURCES}
)

SET(METAZION_NET_LINK_LIBRARY optimized MzNet debug MzNetD)
TARGET_LINK_LIBRARIES(${SELF} ${METAZION_NET_LINK_LIBRARY})
SET(METAZION_SHARE_LINK_LIBRARY optimized MzShare debug MzShareD)
TARGET_LINK_LIBRARIES(${SELF} ${METAZION_SHARE_LINK_LIBRARY})
IF(UNIX)
TARGET_LINK_LIBRARIES(${SELF} pthread)
ENDIF(UNIX)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Bin)

IF(PRODUCT_INSTALL)
    INSTALL(TARGETS ${SELF}
    LIBRARY DESTINATION ${LIB_DIR}
    ARCHIVE DESTINATION ${LIB_DIR}
	RUNTIME DESTINATION ${BIN_DIR})
ENDIF(PRODUCT_INSTALL)

# These are used to create visual studio folders.
SOURCE_GROUP(Header FILES ${SELF_HEADERS})
SOURCE_GROUP(Source FILES ${SELF_SOURCES})
SOURCE_GROUP(Header\\Xml FILES ${SELF_XML_HEADERS})
SOURCE_GROUP(Header\\Packet FILES ${SELF_PACKET_HEADERS})
SOURCE_GROUP(Source\\Packet FILES ${SELF_PACKET_SOURCES})
SOURCE_GROUP(Header\\Server FILES ${SELF_SERVER_HEADERS})
SOURCE_GROUP(Source\\Server FILES ${SELF_SERVER_SOURCES})